# puma-robot

./: .gitignore  CMakeLists.txt  LICENSE  README.md
dep/inc/glad/: glad.h
dep/lib/: glfw3.lib
res/shaders/basic/: position.vert  white.frag
res/shaders/flame/: flame.frag  flame.geom
res/shaders/pbr/: pbr.frag  pbr.vert
res/shaders/phong/: phong.frag  phong.vert
res/shaders/point/: point.frag  point.vert
res/shaders/shadow/: shadow.frag  shadow.geom  shadow.vert
res/shaders/skybox/: skybox.frag
res/shaders/spark/: spark.frag  spark.geom  spark.vert
res/shaders/trail/: trail.frag  trail.geom
src/: Robot.cpp  Robot.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  VariantUtil.h  glad.c  glew_glfw.h  main.cpp
src/app/: AppContext.h
src/camera/: Camera.cpp  Camera.h  CameraAnchorFree.cpp  CameraAnchorFree.h  CameraGameLike.cpp  CameraGameLike.h  baseCamera.cpp  baseCamera.h
src/cylinder/: Cylinder.cpp  Cylinder.h
src/debug/: DebugUI.cpp  DebugUI.h
src/flame/: Flame.cpp  Flame.h
src/fourier/: FourierShape.h  FourierShapeFactory.cpp  FourierShapeFactory.h
src/framebufferManager/: FrameBufferManager.cpp  FrameBufferManager.h
src/gui/: Gui.cpp  Gui.h
src/importer/: Importer.cpp  Importer.h  Model.h  RawModel.h
src/input/: InputHandler.cpp  InputHandler.h
src/light/: PointLight.h
src/material/: Material.h
src/mesh/: EmptyVertex.h  Mesh.h  PosNorTexVertex.h  PositionNormalVertex.h  PositionVertex.h  SparkVertex.h  is_vertex.h
src/mirror/: Mirror.cpp  Mirror.h
src/point/: Point.h
src/robot/: Robot.cpp  Robot.h  RobotKinematics.cpp  RobotKinematics.h
src/room/: Room.cpp  Room.h
src/skybox/: Skybox.cpp  Skybox.h
src/spark/: Spark.h  SparkGenerator.cpp  SparkGenerator.h  SparksEntity.cpp  SparksEntity.h
src/texture/: Texture.cpp  Texture.h
src/trail/: Trail.cpp  Trail.h
